Docs re Java heap space